
2018-05-21  Ron Norman <rjn@inglenet.com>
	* cobc.c: If LANG is undefined in environment, then set it to "C"

2018-05-15  Ron Norman <rjn@inglenet.com>
	* field.c: When -fibmcomp is used, COMP-5 as well as COMP-4/BINARY
	         should have the size computed as binary-size = 2-4-8

2018-03-25  Ron Norman <rjn@inglenet.com>
	* tree.c: Removed warn_cannot_get_utc

2018-03-11  Ron Norman <rjn@inglenet.com>
	* typeck.c: Adjust UTC Offset for Daylight Savings Time

2018-03-10  Ron Norman <rjn@inglenet.com>
	* codegen.c,tree.h: Make chk_field_variable_size available
	* typeck.c: If destination of a MOVE is variable_size then
	   emit code as if  dest (1:)  had been coded so entire
	   field is copied. To avoid ODO limiting length of MOVE.

2018-03-10  Ron Norman <rjn@inglenet.com>
	* codegen.c: Fix for INITIALIZE of signed numeric use 'cob_move'

2018-03-08  Ron Norman <rjn@inglenet.com>
	* codegen.c: For INITIALIZE of signed numeric use 'cob_move'

2018-03-05  Ron Norman <rjn@inglenet.com>
	* Changes to solve REPORT problems related to COB_TREE_DEBUG

	* tree.h: Added CB_REF_OR_REPORT_P and CB_REPORT_PTR
	* tree.c: cb_ref verifies it was passed a CB_REFERENCE
	* parser.y: Remove report_name_list and changes for COB_TREE_DEBUG
	* codegen.c: Fixed problems found by COB_TREE_DEBUG
	* typeck.c: Fixed problems found by COB_TREE_DEBUG

2018-01-30  Ron Norman <rjn@inglenet.com>
	* parser.y: Have REPORT fields parse all USAGE so if it
	           is not DISPLAY and meaningful error happens
	* field.c: Add check for REPORT/SCREEN field not DISPLAY
	   'fieldname' should be USAGE DISPLAY for REPORT/SECTION

2018-01-30  Ron Norman <rjn@inglenet.com>
	* codegen.c: Add check for field IS EXTERNAL

2018-01-29  Ron Norman <rjn@inglenet.com>
	* tree.c,tree.h,typeck.c: Fine tuning of arithmetic_osvs
	
2018-01-23  Ron Norman <rjn@inglenet.com>
	* tree.c: Fixed coding error to use CB_FIELD_PTR
	* codegen.c,typeck.c: Changed to use CB_FIELD_PTR as needed
