@@ -3574,7 +3574,11 @@ output_initialize_one (struct cb_initialize *p, cb_tree x)
 		output_string (litbuff + inci, size, l->llit);
 		output (", %d);\n", size);
 
-		if (offset) {
+		if (offset > 0 
+		 && n > 0) {
+		 	if (f->storage == CB_STORAGE_REPORT	/* REPORT lines are cleared to SPACES */
+			 && buffchar == ' ')
+				return;
 			output_prefix ();
 			output ("memset (");
 			output_data (x);
@@ -3623,7 +3627,6 @@ output_initialize_one (struct cb_initialize *p, cb_tree x)
 			output_move (cb_space, x);
 			break;
 		default:
-			printf("DBG field %s\n",f->name);
 			cobc_abort_pr (_("Unexpected tree category %d"),
 				 (int)CB_TREE_CATEGORY (x));
 			COBC_ABORT ();
@@ -9321,6 +9324,13 @@ output_internal_function (struct cb_program *prog, cb_tree parameter_list)
 			struct cb_report *rep;
 			rep = CB_REPORT_PTR (CB_VALUE(l));
 			if(rep) {
+				for (f=rep->records; f; f = f->sister) {	
+					/* Clear report lines to SPACES */
+					output_prefix ();
+					output ("memset (");
+					output_base (f, 0);
+					output (", ' ', %d);\n", f->size);
+				}
 				output_initial_values (rep->records);
 			}
 		}
