@@ -1,4 +1,8 @@
 
+2018-05-23  Ron Norman <rjn@inglenet.com>
+	* codegen.c: For report records, initialize to SPACEs and
+	    when setting to a literal, skip clear of trailing spaces
+
 2018-05-21  Ron Norman <rjn@inglenet.com>
 	* cobc.c: If LANG is undefined in environment, then set it to "C"
 
